--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@ github_username:  sinpycn
 minima:
   date_format: "%b %-d, %Y"
 
+permalink: /:year/:month/:day/:title.html
+
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
 #header_pages:
