--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
 title: Peng Shen's Home
 author: Peng Shen
-# email: your-email@domain.com
+#email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Blog of Peng Shen.
 
 #twitter_username: jekyllrb
 github_username:  sinpycn
@@ -27,7 +25,6 @@ theme: minima
 exclude:
   - Gemfile
   - Gemfile.lock
-
 
 
 highlighter: rouge
